force-app/main/default/objects/CampaignMember/fields/Coupon_Code__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Code__c</fullName>
    <label>Coupon Code</label>
    <referenceTo>Coupon_Code__c</referenceTo>
    <relationshipLabel>Redemptions</relationshipLabel>
    <relationshipName>Redemptions</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Set only on CampaignMember rows that represent a coupon redemption (see the Feature Expansion Plan §1) — blank on every ordinary campaign membership row.</description>
</CustomField>