force-app/main/default/objects/CampaignMember/fields/Discount_Applied__c.field-meta.xml
<CustomField>
    <fullName>Discount_Applied__c</fullName>
    <label>Discount Applied</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>The actual ₹ amount this redemption knocked off the order total. Set only on CampaignMember rows that represent a coupon redemption.</description>
</CustomField>