force-app/main/default/objects/CampaignMember/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Coupon Redemptions</relationshipLabel>
    <relationshipName>Coupon_Redemptions</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which Order this coupon redemption was applied to. Set only on CampaignMember rows that represent a redemption.</description>
</CustomField>